src-ken&y/objects/Segment_Definition__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines the GL Segments, their associated objects, and the field on the Accounting Entry</description>
    <fields>
        <fullName>Accounting_Entry_Field__c</fullName>
        <description>Field on the accounting entry where this segment information is stored</description>
        <inlineHelpText>Field on the accounting entry where this segment information is stored</inlineHelpText>
        <label>Accounting Entry Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Accounting_Rule_Default__c</fullName>
        <label>Accounting Rule Default</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Rule_Reference_Value__c</fullName>
        <label>Accounting Rule Reference Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Rule_Segment__c</fullName>
        <label>Accounting Rule Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <description>The order that the segments are displayed within the application</description>
        <inlineHelpText>The order that the segments are displayed within the application, may be different than the segment number which is used in reporting.</inlineHelpText>
        <label>Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>Name of the API for defined as segment 1</description>
        <inlineHelpText>Name of the API for defined as segment 1</inlineHelpText>
        <label>Object API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Segment_Number__c</fullName>
        <label>Segment Number</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Accounting Entry Segment Definition</label>
</CustomObject>